Fixed styling for Login component and fixed white space for scrollin off page

--- a/learnify/src/App.css
+++ b/learnify/src/App.css
@@ -1,3 +1,7 @@
+html, body {
+  background-color: #1d2d44;
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
